--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/server.js"
+    "start": "nodemon backend/server.js",
+    "build": "npm install && npm install --prefix frontend/vite-project && npm run build --prefix frontend/vite-project"
   },
   "repository": {
     "type": "git",
